Доработка таблицы с паролями, расшифровки ключа второго фактора, мелкий рефакторинг.

--- a/client_side/resources/ui/auth_window.ui
+++ b/client_side/resources/ui/auth_window.ui
@@ -107,7 +107,7 @@
          </sizepolicy>
         </property>
         <property name="text">
-         <string>1qaz!QAZ</string>
+         <string>1111111111111111</string>
         </property>
         <property name="echoMode">
          <enum>QLineEdit::Password</enum>
