--- a/client_side/resources/ui/registration_window.ui
+++ b/client_side/resources/ui/registration_window.ui
@@ -83,10 +83,10 @@
         <bool>true</bool>
        </property>
        <property name="echoMode">
-        <enum>QLineEdit::Normal</enum>
+        <enum>QLineEdit::Password</enum>
        </property>
        <property name="placeholderText">
-        <string>Минимум 16 символов</string>
+        <string/>
        </property>
       </widget>
      </item>
