Добавление функции изменения пароля.

--- a/client_side/resources/ui/main_window.ui
+++ b/client_side/resources/ui/main_window.ui
@@ -104,12 +104,12 @@
       </attribute>
       <column>
        <property name="text">
-        <string>Title</string>
+        <string>Service</string>
        </property>
       </column>
       <column>
        <property name="text">
-        <string>Username</string>
+        <string>Login</string>
        </property>
       </column>
       <column>
