--- a/client_side/resources/ui/passwords_add_window.ui
+++ b/client_side/resources/ui/passwords_add_window.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Vaultary</string>
+   <string>Vaultary - password add</string>
   </property>
   <layout class="QGridLayout" name="gridLayout" rowstretch="1,1,1,1,1,1,1,1,1,1" columnstretch="1,0">
    <item row="4" column="0" rowspan="2" colspan="2">
@@ -50,7 +50,11 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="password_lineEdit"/>
+      <widget class="QLineEdit" name="password_lineEdit">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
@@ -100,7 +104,7 @@
         <number>64</number>
        </property>
        <property name="value">
-        <number>1</number>
+        <number>16</number>
        </property>
       </widget>
      </item>
