Добавление функции фильтрации по категориям.

--- a/client_side/resources/ui/passwords_add_window.ui
+++ b/client_side/resources/ui/passwords_add_window.ui
@@ -6,16 +6,16 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>367</width>
-    <height>423</height>
+    <width>393</width>
+    <height>480</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Vaultary - password add</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout" rowstretch="1,1,1,1,1,1,1,1,1,1" columnstretch="1,0">
+  <layout class="QGridLayout" name="gridLayout" rowstretch="1,1,1,1,1,1,1,1,1,1" columnstretch="0,0">
    <item row="4" column="0" rowspan="2" colspan="2">
-    <layout class="QVBoxLayout" name="verticalLayout_3" stretch="0,1">
+    <layout class="QVBoxLayout" name="verticalLayout_3" stretch="0,0">
      <item>
       <widget class="QLabel" name="category_label">
        <property name="text">
@@ -31,11 +31,12 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <item>
-        <property name="text">
-         <string/>
-        </property>
-       </item>
+       <property name="focusPolicy">
+        <enum>Qt::ClickFocus</enum>
+       </property>
+       <property name="editable">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
     </layout>
@@ -45,12 +46,15 @@
      <item>
       <widget class="QLabel" name="password_label">
        <property name="text">
-        <string>Password</string>
+        <string>Password*</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLineEdit" name="password_lineEdit">
+       <property name="focusPolicy">
+        <enum>Qt::StrongFocus</enum>
+       </property>
        <property name="text">
         <string/>
        </property>
@@ -75,6 +79,9 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="focusPolicy">
+        <enum>Qt::StrongFocus</enum>
+       </property>
       </widget>
      </item>
     </layout>
@@ -97,6 +104,9 @@
      </item>
      <item row="1" column="4" colspan="2">
       <widget class="QSpinBox" name="length_spinBox">
+       <property name="focusPolicy">
+        <enum>Qt::StrongFocus</enum>
+       </property>
        <property name="minimum">
         <number>1</number>
        </property>
@@ -150,7 +160,11 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="URL_lineEdit"/>
+      <widget class="QLineEdit" name="URL_lineEdit">
+       <property name="focusPolicy">
+        <enum>Qt::StrongFocus</enum>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
@@ -158,6 +172,9 @@
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPushButton" name="generate_pushButton">
+       <property name="focusPolicy">
+        <enum>Qt::StrongFocus</enum>
+       </property>
        <property name="text">
         <string>Generate password</string>
        </property>
@@ -165,6 +182,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="clear_pushButton">
+       <property name="focusPolicy">
+        <enum>Qt::StrongFocus</enum>
+       </property>
        <property name="text">
         <string>Clear</string>
        </property>
@@ -172,8 +192,14 @@
      </item>
      <item>
       <widget class="QPushButton" name="add_pushButton">
+       <property name="focusPolicy">
+        <enum>Qt::StrongFocus</enum>
+       </property>
        <property name="text">
         <string>Add credential</string>
+       </property>
+       <property name="shortcut">
+        <string>Return</string>
        </property>
       </widget>
      </item>
@@ -189,11 +215,15 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="service_lineEdit"/>
+      <widget class="QLineEdit" name="service_lineEdit">
+       <property name="focusPolicy">
+        <enum>Qt::StrongFocus</enum>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
-   <item row="6" column="0">
+   <item row="6" column="0" colspan="2">
     <layout class="QVBoxLayout" name="verticalLayout_6">
      <item>
       <widget class="QLabel" name="notes_label">
@@ -203,12 +233,41 @@
       </widget>
      </item>
      <item>
-      <widget class="QPlainTextEdit" name="notes_plainTextEdit"/>
+      <widget class="QPlainTextEdit" name="notes_plainTextEdit">
+       <property name="focusPolicy">
+        <enum>Qt::ClickFocus</enum>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item row="8" column="0" colspan="2">
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="QLabel" name="error_label">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>service_lineEdit</tabstop>
+  <tabstop>login_lineEdit</tabstop>
+  <tabstop>password_lineEdit</tabstop>
+  <tabstop>URL_lineEdit</tabstop>
+  <tabstop>capital_checkBox</tabstop>
+  <tabstop>lowercase_checkBox</tabstop>
+  <tabstop>numbers_checkBox</tabstop>
+  <tabstop>special_checkBox</tabstop>
+  <tabstop>length_spinBox</tabstop>
+  <tabstop>generate_pushButton</tabstop>
+  <tabstop>clear_pushButton</tabstop>
+  <tabstop>add_pushButton</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
