--- a/client_side/resources/ui/passwords_edit_window.ui
+++ b/client_side/resources/ui/passwords_edit_window.ui
@@ -7,42 +7,15 @@
     <x>0</x>
     <y>0</y>
     <width>394</width>
-    <height>423</height>
+    <height>480</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Vaultary - password edit</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout" rowstretch="1,1,1,1,1,1,1,1,1" columnstretch="0,0,0">
-   <item row="5" column="0" colspan="3">
-    <layout class="QVBoxLayout" name="verticalLayout_5">
-     <item>
-      <widget class="QLabel" name="url_label">
-       <property name="text">
-        <string>URL</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="url_lineEdit"/>
-     </item>
-    </layout>
-   </item>
-   <item row="7" column="0" colspan="3">
+  <layout class="QGridLayout" name="gridLayout" rowstretch="1,1,1,1,1,1,1,1,1,1" columnstretch="0,0">
+   <item row="7" column="0" colspan="2">
     <layout class="QGridLayout" name="gridLayout_2">
-     <item row="1" column="4">
-      <widget class="QSpinBox" name="length_spinBox">
-       <property name="minimum">
-        <number>1</number>
-       </property>
-       <property name="maximum">
-        <number>64</number>
-       </property>
-       <property name="value">
-        <number>16</number>
-       </property>
-      </widget>
-     </item>
      <item row="0" column="4">
       <widget class="QLabel" name="length_label">
        <property name="text">
@@ -81,37 +54,54 @@
        </property>
       </widget>
      </item>
+     <item row="1" column="4">
+      <widget class="QSpinBox" name="length_spinBox">
+       <property name="minimum">
+        <number>1</number>
+       </property>
+       <property name="maximum">
+        <number>64</number>
+       </property>
+       <property name="value">
+        <number>16</number>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
-   <item row="4" column="0" colspan="3">
-    <layout class="QVBoxLayout" name="verticalLayout_4">
+   <item row="4" column="0" colspan="2">
+    <layout class="QVBoxLayout" name="verticalLayout_5">
      <item>
-      <widget class="QLabel" name="confirm_label">
+      <widget class="QLabel" name="url_label">
        <property name="text">
-        <string>Password confirm</string>
+        <string>URL</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="confirm_lineEdit"/>
+      <widget class="QLineEdit" name="url_lineEdit"/>
      </item>
     </layout>
    </item>
-   <item row="6" column="0" colspan="3">
-    <layout class="QVBoxLayout" name="verticalLayout_6">
+   <item row="9" column="0" colspan="2">
+    <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QLabel" name="notes_label">
+      <widget class="QPushButton" name="generate_pushButton">
        <property name="text">
-        <string>Notes</string>
+        <string>Generate password</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPlainTextEdit" name="notes_plainTextEdit"/>
+      <widget class="QPushButton" name="confirm_pushButton">
+       <property name="text">
+        <string>Confirm changes</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
-   <item row="0" column="0" colspan="3">
+   <item row="0" column="0" colspan="2">
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="QLabel" name="service_label">
@@ -125,7 +115,7 @@
      </item>
     </layout>
    </item>
-   <item row="1" column="0" rowspan="2" colspan="3">
+   <item row="1" column="0" rowspan="2" colspan="2">
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
       <widget class="QLabel" name="login_label">
@@ -139,12 +129,12 @@
      </item>
     </layout>
    </item>
-   <item row="3" column="0" colspan="3">
+   <item row="3" column="0" colspan="2">
     <layout class="QVBoxLayout" name="verticalLayout_3">
      <item>
       <widget class="QLabel" name="password_label">
        <property name="text">
-        <string>Password</string>
+        <string>Password*</string>
        </property>
       </widget>
      </item>
@@ -153,19 +143,40 @@
      </item>
     </layout>
    </item>
-   <item row="8" column="0" colspan="3">
-    <layout class="QHBoxLayout" name="horizontalLayout">
+   <item row="6" column="0" colspan="2">
+    <layout class="QVBoxLayout" name="verticalLayout_6">
      <item>
-      <widget class="QPushButton" name="generate_pushButton">
+      <widget class="QLabel" name="notes_label">
        <property name="text">
-        <string>Generate password</string>
+        <string>Notes</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="confirm_pushButton">
+      <widget class="QPlainTextEdit" name="notes_plainTextEdit"/>
+     </item>
+    </layout>
+   </item>
+   <item row="5" column="0" colspan="2">
+    <layout class="QVBoxLayout" name="verticalLayout_4">
+     <item>
+      <widget class="QLabel" name="category_label">
        <property name="text">
-        <string>Confirm changes</string>
+        <string>Category</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="category_comboBox"/>
+     </item>
+    </layout>
+   </item>
+   <item row="8" column="0" colspan="2">
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="QLabel" name="error_label">
+       <property name="text">
+        <string/>
        </property>
       </widget>
      </item>
