Работа над категориями, их созданием и изменением пользователями, также правки интерфейса и мелкий рефакторинг.

--- a/client_side/resources/ui/passwords_edit_window.ui
+++ b/client_side/resources/ui/passwords_edit_window.ui
@@ -167,7 +167,11 @@
       </widget>
      </item>
      <item>
-      <widget class="QComboBox" name="category_comboBox"/>
+      <widget class="QComboBox" name="category_comboBox">
+       <property name="editable">
+        <bool>true</bool>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
